<resources>
    <string name="app_name">MyFitnessCenter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Button</string>
    <string name="myProfile_button">Button</string>
    <string name="training_button">Button</string>
    <string name="diary_button">Diary</string>
    <string name="Training_button">Training</string>
    <string name="MyProfile_button">My Profile</string>
    <string name="log_in_or_register_button">Log in or register</string>
    <string name="settings_button">Settings</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="addFood_button">Add food</string>
    <string name="launch_textView">Launch</string>
    <string name="breakfast_textView">Breakfast</string>
    <string name="dinner_textView">Dinner</string>
    <string name="snacks_textView">Snacks</string>
    <string name="water_textView">Water</string>
    <string name="add_water">Add</string>
    <string name="log_new_workout_button">Log new workout</string>
    <string name="start_button">Start</string>
    <string name="gym_button">Gym</string>
    <string name="ride_button">Ride</string>
    <string name="run_button">Run</string>
    <string name="gym_textView">Gym</string>
    <string name="run_textView">Run</string>
    <string name="ride_textView">Ride</string>
    <string name="myProfile_settings_button">Settings</string>
    <string name="myGoals_button">My Goals</string>
    <string name="setNewGoals_button">Set New Goals</string>
</resources>
