<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Diary">

    <Button
        android:id="@+id/water_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#7A7878"
        android:text="@string/add_water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_textView"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/snacks_addFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A7878"
        android:text="@string/addFood_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snacks_textView"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/dinner_addFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A7878"
        android:text="@string/addFood_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinner_textView"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/launch_addFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A7878"
        android:text="@string/addFood_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_textView"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A7878"
        android:text="@string/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/breakfast_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/breakfast_addFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A7878"
        android:text="@string/addFood_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_textView"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/launch_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_addFood"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/dinner_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_addFood"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/snacks_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinner_addFood"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/water_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snacks_addFood"
        app:layout_constraintVertical_bias="0.131" />
</androidx.constraintlayout.widget.ConstraintLayout>